--- a/lang/es.json
+++ b/lang/es.json
@@ -18,6 +18,7 @@
     "Ensure your account is using a long, random password to stay secure.": "Asegúrese que su cuenta esté usando una contraseña larga y aleatoria para mantenerse seguro.",
     "Forbidden": "Prohibido",
     "Forgot your password?": "¿Olvidó su contraseña?",
+    "Phone": "Teléfono",
     "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "¿Olvidó su contraseña? No hay problema. Simplemente déjenos saber su dirección de correo electrónico y le enviaremos un enlace para restablecer la contraseña que le permitirá elegir una nueva.",
     "Go to page :page": "Ir a la página :page",
     "Hello!": "¡Hola!",
