--- a/lang/es.json
+++ b/lang/es.json
@@ -68,5 +68,11 @@
     "Whoops!": "¡Ups!",
     "You are receiving this email because we received a password reset request for your account.": "Ha recibido este mensaje porque se solicitó un restablecimiento de contraseña para su cuenta.",
     "You're logged in!": "¡Usted está conectado!",
-    "Your email address is unverified.": "Su dirección de correo electrónico no está verificada."
+    "Your email address is unverified.": "Su dirección de correo electrónico no está verificada.",
+    "Account Type": "Tipo de cuenta",
+    "Select your role": "Seleccionar tu tipo de usuario",
+    "Developer": "Desarrollador",
+    "Recluiter": "Reclutador",
+    "Gets a job": "Obtiene un empleo",
+    "Post jobs": "Publica empleos"
 }
