Traduccion para Your Vacancies

--- a/lang/es.json
+++ b/lang/es.json
@@ -86,5 +86,6 @@
     "Post Vacancy": "Publicar publicación",
     "New Vacancy": "Nueva publicación",
     "Select your salary": "Selecciona el salario",
-    "Select your category": "Selecciona la categoría"
+    "Select your category": "Selecciona la categoría",
+    "Your Vacancies": "Tus vacantes"
 }
