Funcionalidad para crear una vacante

--- a/lang/es.json
+++ b/lang/es.json
@@ -87,5 +87,6 @@
     "New Vacancy": "Nueva publicación",
     "Select your salary": "Selecciona el salario",
     "Select your category": "Selecciona la categoría",
-    "Your Vacancies": "Tus vacantes"
+    "Your Vacancies": "Tus vacantes",
+    "The vacancy was published successfully!": "¡La vacante se publicó satisfactoriamente!"
 }
