Se agrega la paginacion y las traducciones pendientes

--- a/lang/es.json
+++ b/lang/es.json
@@ -92,5 +92,6 @@
     "The vacancy was published successfully!": "¡La vacante se publicó satisfactoriamente!",
     "Candidates": "Candidatos",
     "Edit": "Editar",
-    "Delete": "Eliminar"
+    "Delete": "Eliminar",
+    "There is no vacancies to show!": "¡No se encontró vacantes para mostrar!"
 }
