Funcionalidad para editar vacante

--- a/lang/es.json
+++ b/lang/es.json
@@ -92,6 +92,7 @@
     "Select your category": "Selecciona la categoría",
     "Your Vacancies": "Tus vacantes",
     "The vacancy was published successfully!": "¡La vacante se publicó satisfactoriamente!",
+    "The vacancy was updated successfully!": "¡La vacante se actualizó satisfactoriamente!",
     "Candidates": "Candidatos",
     "Edit": "Editar",
     "Delete": "Eliminar",
