Policy de vacante

--- a/lang/es.json
+++ b/lang/es.json
@@ -99,5 +99,6 @@
     "There is no vacancies to show!": "¡No se encontró vacantes para mostrar!",
     "Vacancy Image": "Imagen vacante",
     "Actual Cover": "Portada actual",
-    "Return to the list of vacancies": "Regresar a la lista de vacantes"
+    "Return to the list of vacancies": "Regresar a la lista de vacantes",
+    "New Image": "Nueva imagen"
 }
