Imagen y descripcion de las vacantes

--- a/lang/es.json
+++ b/lang/es.json
@@ -105,5 +105,6 @@
     "You will not be able to revert this!": "¡No podrás revertir esto!",
     "Yes delete it!": "¡Si eliminar!",
     "Deleted!": "¡Eliminado!",
-    "Your file has been deleted.": "Tu archivo a sido eliminado."
+    "Your file has been deleted.": "Tu archivo a sido eliminado.",
+    "Vacancy Description": "Descripción de la vacante"
 }
