--- a/lang/es.json
+++ b/lang/es.json
@@ -106,5 +106,8 @@
     "Yes delete it!": "¡Si eliminar!",
     "Deleted!": "¡Eliminado!",
     "Your file has been deleted.": "Tu archivo a sido eliminado.",
-    "Vacancy Description": "Descripción de la vacante"
+    "Vacancy Description": "Descripción de la vacante",
+    "Seeing the Vacancy": "Viendo la vacante",
+    "Do you want to apply for this vacancy?": "¿Quieres postular a esta vacante?",
+    "With your account you can apply for this and other vacancies": "Con tu cuenta puedes postular a esta y otras vacantes"
 }
