Componente: Postular a una vacante

--- a/lang/es.json
+++ b/lang/es.json
@@ -109,5 +109,6 @@
     "Vacancy Description": "Descripción de la vacante",
     "Seeing the Vacancy": "Viendo la vacante",
     "Do you want to apply for this vacancy?": "¿Quieres postular a esta vacante?",
-    "With your account you can apply for this and other vacancies": "Con tu cuenta puedes postular a esta y otras vacantes"
+    "With your account you can apply for this and other vacancies": "Con tu cuenta puedes postular a esta y otras vacantes",
+    "Apply for this vacancy": "Postular a esta vacante"
 }
