--- a/lang/es.json
+++ b/lang/es.json
@@ -99,7 +99,7 @@
     "There is no vacancies to show!": "¡No se encontró vacantes para mostrar!",
     "Vacancy Image": "Imagen vacante",
     "Actual Cover": "Portada actual",
-    "Return to the list of vacancies": "Regresar a la lista de vacantes",
+    "Return to your list of vacancies": "Regresar a tu lista de vacantes",
     "New Image": "Nueva imagen",
     "Are you sure?": "¿Estás seguro?",
     "You will not be able to revert this!": "¡No podrás revertir esto!",
