Funcionalidad para guardar a los postulantes

--- a/lang/es.json
+++ b/lang/es.json
@@ -110,5 +110,6 @@
     "Seeing the Vacancy": "Viendo la vacante",
     "Do you want to apply for this vacancy?": "¿Quieres postular a esta vacante?",
     "With your account you can apply for this and other vacancies": "Con tu cuenta puedes postular a esta y otras vacantes",
-    "Apply for this vacancy": "Postular a esta vacante"
+    "Apply for this vacancy": "Postular a esta vacante",
+    "Your request was sent, good luck": "Su solicitud fue enviada, buena suerte"
 }
