--- a/lang/es.json
+++ b/lang/es.json
@@ -111,5 +111,6 @@
     "Do you want to apply for this vacancy?": "¿Quieres postular a esta vacante?",
     "With your account you can apply for this and other vacancies": "Con tu cuenta puedes postular a esta y otras vacantes",
     "Apply for this vacancy": "Postular a esta vacante",
-    "Your request was sent, good luck": "Su solicitud fue enviada, buena suerte"
+    "Your request was sent, good luck": "Su solicitud fue enviada, buena suerte",
+    "You already applied for this job, we wish you the best of luck.": "Ya postulaste a este trabajo, te deseamos la mejor de las suertes."
 }
