Correcion de error (faltaba un import) correcion de material

--- a/lang/es.json
+++ b/lang/es.json
@@ -112,5 +112,9 @@
     "With your account you can apply for this and other vacancies": "Con tu cuenta puedes postular a esta y otras vacantes",
     "Apply for this vacancy": "Postular a esta vacante",
     "Your request was sent, good luck": "Su solicitud fue enviada, buena suerte",
-    "You already applied for this job, we wish you the best of luck.": "Ya postulaste a este trabajo, te deseamos la mejor de las suertes."
+    "You already applied for this job, we wish you the best of luck.": "Ya postulaste a este trabajo, te deseamos la mejor de las suertes.",
+    "You have received a new candidate in your vacancy.": "Ha recibido un nuevo candidato para su vacante",
+    "The vacancy is:": "La vacante es:",
+    "See notification": "Ver notificación",
+    "Thank you for using our application!": "¡Le agredecemos por utlizar nuestra aplicación!"
 }
