Vista de notificacion

--- a/lang/es.json
+++ b/lang/es.json
@@ -116,5 +116,10 @@
     "You have received a new candidate in your vacancy.": "Ha recibido un nuevo candidato para su vacante",
     "The vacancy is:": "La vacante es:",
     "See notification": "Ver notificación",
-    "Thank you for using our application!": "¡Le agredecemos por utlizar nuestra aplicación!"
+    "Thank you for using our application!": "¡Le agredecemos por utlizar nuestra aplicación!",
+    "Notifications": "Notificaciones",
+    "My Notifications": "Mis notificaciones",
+    "You have a new candidate in the vacancy": "Tienes una nueva notificación en la vacante",
+    "Request received ago": "Solicitud recibida",
+    "See candidates": "Ver candidatos"
 }
