--- a/lang/es.json
+++ b/lang/es.json
@@ -121,5 +121,6 @@
     "My Notifications": "Mis notificaciones",
     "You have a new candidate in the vacancy": "Tienes una nueva notificación en la vacante",
     "Request received ago": "Solicitud recibida",
-    "See candidates": "Ver candidatos"
+    "See candidates": "Ver candidatos",
+    "You do not have any new notifications": "Usted no tiene notificaciones nuevas"
 }
