Actualizacion en el E-MAIL de nuevo candidato

--- a/lang/es.json
+++ b/lang/es.json
@@ -122,5 +122,6 @@
     "You have a new candidate in the vacancy": "Tienes una nueva notificación en la vacante",
     "Request received ago": "Solicitud recibida",
     "See candidate": "Ver candidato",
-    "You do not have any new notifications": "Usted no tiene notificaciones nuevas"
+    "You do not have any new notifications": "Usted no tiene notificaciones nuevas",
+    "New Candidate": "Nuevo candidato"
 }
