Creando la pagina principal

--- a/lang/es.json
+++ b/lang/es.json
@@ -126,5 +126,7 @@
     "New Candidate": "Nuevo candidato",
     "List of Applicants for this Vacancy": "Lista de postulantes para esta vacante",
     "The day this applicant applied": "El tiempo que este postulante postuló",
-    "See CV": "Ver CV"
+    "See CV": "Ver CV",
+    "Find a Tech job remotely": "Encuentra un trabajo en Tech de forma remota",
+    "Find your dream job at an international company; we have vacancies for front-end developers, backend developers, DevOps, mobile developers, and much more!": "Encuentra el trabajo de tus sueños en una empresa internacional; tenemos vacantes para front end developer, backend, devops, mobile y mucho más!"
 }
