Inicio del filtro de busqueda

--- a/lang/es.json
+++ b/lang/es.json
@@ -128,5 +128,11 @@
     "The day this applicant applied": "El tiempo que este postulante postuló",
     "See CV": "Ver CV",
     "Find a Tech job remotely": "Encuentra un trabajo en Tech de forma remota",
-    "Find your dream job at an international company; we have vacancies for front-end developers, backend developers, DevOps, mobile developers, and much more!": "Encuentra el trabajo de tus sueños en una empresa internacional; tenemos vacantes para front end developer, backend, devops, mobile y mucho más!"
+    "Find your dream job at an international company; we have vacancies for front-end developers, backend developers, DevOps, mobile developers, and much more!": "Encuentra el trabajo de tus sueños en una empresa internacional; tenemos vacantes para front end developer, backend, devops, mobile y mucho más!",
+    "Our available vacancies": "Nuestras vacantes disponibles",
+    "Search Term": "Término de búsqueda",
+    "Select": "Seleccione",
+    "See Vacancy": "Ver la vacante",
+    "Find the Vacancy": "Encuentra tu empleo",
+    "Search": "Buscar"
 }
