[Fin del Proyecto] - Finalizando el buscador

--- a/lang/es.json
+++ b/lang/es.json
@@ -134,5 +134,6 @@
     "Select": "Seleccione",
     "See Vacancy": "Ver la vacante",
     "Find the Vacancy": "Encuentra tu empleo",
-    "Search": "Buscar"
+    "Search": "Buscar",
+    "Search Term Example: Vue": "Término de búsqueda, Ejemplo: Vue"
 }
